--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,26 @@ section{
     color:var(--yellow);
 }
 
+.heading .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.heading .box {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+}
+
+.heading .box img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 header{
     position: fixed;
     top:0; left:0;
@@ -183,10 +203,31 @@ header .navbar ul li a:hover{
     padding:1rem 0;
 }
 
+.tech .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding:1rem 0;
+}
+
+.tech .row .info{
+    flex:1 1 48rem;
+    padding:2rem 1rem;
+    padding-left: 6rem;
+}
+
 .about .row .info{
     flex:1 1 48rem;
     padding:2rem 1rem;
     padding-left: 6rem;
+}
+
+.tech .row .info h3{
+    font-size: 2rem;
+    color:var(--yellow);
+    padding:1rem 0;
+    font-weight: normal;
 }
 
 .about .row .info h3{
@@ -196,9 +237,21 @@ header .navbar ul li a:hover{
     font-weight: normal;
 }
 
+.tech .row .info h3 span{
+    color:#eee;
+    padding:0 .5rem;
+}
+
 .about .row .info h3 span{
     color:#eee;
     padding:0 .5rem;
+}
+
+.tech .row .counter{
+    flex:1 1 48rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .about .row .counter{
@@ -206,6 +259,24 @@ header .navbar ul li a:hover{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.tech .row .counter .box{
+    width:20rem;
+    background:#222;
+    text-align: center;
+    padding: 2rem;
+    margin:2rem;
+}
+
+.tech .row .counter .box span{
+    font-size: 4rem;
+    color:var(--yellow);
+}
+
+.tech .row .counter .box h3{
+    font-size: 2rem;
+    color:#fff;
 }
 
 .about .row .counter .box{
@@ -226,6 +297,23 @@ header .navbar ul li a:hover{
     color:#fff;
 }
 
+.exp .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding:1rem 0;
+    padding-left: 3rem;
+}
+
+.exp .box-container .box{
+    width:27rem;
+    margin:4rem 1rem;
+    padding-left: 4rem;
+    border-left: .2rem solid #fff;
+    position: relative;
+}
+
 .education .box-container{
     display: flex;
     align-items: center;
@@ -242,6 +330,27 @@ header .navbar ul li a:hover{
     border-left: .2rem solid #fff;
     position: relative;
 }
+
+.exp .box-container .box span{
+    font-size: 1.2rem;
+    background:#222;
+    color:#fff;
+    border-radius: 5rem;
+    padding:.5rem 2.5rem;
+}
+
+.exp .box-container .box h3{
+    font-size: 2rem;
+    color:#fff;
+    padding-top: 1.5rem;
+}
+
+.exp .box-container .box p{
+    font-size: 1.4rem;
+    color:#eee;
+    padding: 1rem 0;
+}
+
 
 .education .box-container .box span{
     font-size: 1.3rem;
@@ -261,6 +370,19 @@ header .navbar ul li a:hover{
     font-size: 1.4rem;
     color:#eee;
     padding: 1rem 0;
+}
+
+.exp .box-container .box i{
+    position: absolute;
+    top:-1.5rem; left:-2.5rem;
+    height:5rem;
+    width: 5rem;
+    border-radius: 50%;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    color:#fff;
+    background:var(--yellow);
 }
 
 .education .box-container .box i{
